--- a/style1.css
+++ b/style1.css
@@ -627,7 +627,7 @@ footer ul li h6{
     padding-top: 3px;
 }
 
-  /* Modal styles */
+ 
   .modal {
     display: none;
     position: fixed;
@@ -635,8 +635,8 @@ footer ul li h6{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8); /* Increased opacity to make it stronger */
-    z-index: 9999; /* Higher z-index to ensure it's on top of other elements */
+    background-color: rgba(0, 0, 0, 0.8); 
+    z-index: 9999; 
 }
 
 .modal-content {
@@ -646,7 +646,7 @@ footer ul li h6{
     width: 50%;
 }
 
-/* Close button style */
+
 .close {
     color: #aaa;
     float: right;
